<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.monsterlegendswiki.PayeActivity">

    <ImageView
        android:id="@+id/imageView_stripe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_stripe_widget" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="172dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="102dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_stripe" />

    <EditText
        android:id="@+id/editText_card"
        android:layout_width="175dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/xxxx_xxxx_xxxx_xxxx"
        android:textSize="12dp"
        android:inputType="numberPassword"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="71dp"
        android:layout_height="37dp"
        android:layout_marginBottom="114dp"
        android:layout_marginStart="120dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/mm_yyyy"
        android:inputType="date"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_stripe"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_crypto"
        android:layout_width="74dp"
        android:layout_height="39dp"
        android:layout_marginBottom="315dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="6dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="numberPassword"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_stripe"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/editText_date" />

    <TextView
        android:id="@+id/textView_achat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/achat_version_compl_te"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_stripe" />

    <TextView
        android:id="@+id/textView_prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/montant_1_000_000_000"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_stripe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_retour"
        android:layout_width="160dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_validation"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="260dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>
